# LabChronicle

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
labchronicle/: __init__.py  chronicle.py  core.py  decorators.py  utils.py
labchronicle/handlers/: __init__.py  hdf5.py  memory.py
tests/: test_browser_functions.py  test_chronicle.py  test_chronicle_config.py  test_integration.py  test_loggable_object.py  test_record_book.py  test_record_entry.py
tests/backends/: test_hdf5.py  test_memory.py
