[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "labchronicle"
authors = [
    { name = "Shuxinag Cao", email = "shuxiang.cao@scao.me" },
]
description = "Lab Chronicle is a light weight package that helps you track your experiments."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Experiment tracking"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy',
    'pyyaml',
    'decorator',
    'h5py'
]
dynamic = ["version"]

[tool.setuptools]
py-modules = ['labchronicle']

