[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "labchronicle"
version = "0.0.1"
description = "Lab Chronicle is a light weight package that helps you track your experiments."
authors = ["Shuxiang Cao <shuxiang.cao@scao.me>"]
license = "MIT"
packages = [
    { include = "labchronicle" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
